ADM-717[backend]feat: can verify github token