@@ -49,6 +49,7 @@ public class GitHubService {
 		customTaskExecutor.shutdown();
 	}
 
+	@Deprecated
 	public GitHubResponse verifyToken(String githubToken) {
 		try {
 			String token = "token " + githubToken;
@@ -87,6 +88,25 @@ public class GitHubService {
 		}
 	}
 
+	public void verifyTokenV2(String githubToken) {
+		try {
+			String token = "token " + githubToken;
+			log.info("Start to request github with token");
+			gitHubFeignClient.verifyToken(token);
+			log.info("Successfully verify token from github");
+		}
+		catch (RuntimeException e) {
+			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
+			log.error("Failed to call GitHub with token_error: {} ", cause.getMessage());
+			if (cause instanceof BaseException baseException) {
+				throw baseException;
+			}
+			throw new InternalServerErrorException(
+					String.format("Failed to call GitHub with token_error: %s", cause.getMessage()));
+		}
+	}
+
+	@Deprecated
 	private CompletableFuture<Set<String>> getAllGitHubReposAsync(String token,
 			List<GitHubOrganizationsInfo> gitHubOrganizations) {
 		List<CompletableFuture<List<String>>> repoFutures = gitHubOrganizations.stream()
@@ -144,7 +164,7 @@ public class GitHubService {
 				})
 				.toList();
 
-			return pipelineLeadTimeFutures.stream().map(CompletableFuture::join).collect(Collectors.toList());
+			return pipelineLeadTimeFutures.stream().map(CompletableFuture::join).toList();
 		}
 		catch (RuntimeException e) {
 			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
